@@ -1,8 +1,9 @@
-[gd_scene load_steps=6 format=3 uid="uid://cuqm30mdbu41k"]
+[gd_scene load_steps=7 format=3 uid="uid://cuqm30mdbu41k"]
 
 [ext_resource type="Script" uid="uid://d33oqm6uprjxl" path="res://Board/DuelCreaturesBoard.cs" id="1_s27tx"]
 [ext_resource type="PackedScene" uid="uid://dm8sksf3b1gcw" path="res://Board/UnitCircleComponent.tscn" id="3_iu5jy"]
 [ext_resource type="PackedScene" uid="uid://cvy4hb158pate" path="res://Board/DamageZoneComponent.tscn" id="4_iu5jy"]
+[ext_resource type="PackedScene" uid="uid://xfgt43rddlvv" path="res://Board/HorizontalCardArea.tscn" id="5_3hmgy"]
 [ext_resource type="PackedScene" uid="uid://b7fl8cs62jr2v" path="res://Board/Hand.tscn" id="5_iu5jy"]
 [ext_resource type="PackedScene" uid="uid://cow87og7qhndr" path="res://Board/CardVerticalStack.tscn" id="6_3hmgy"]
 
@@ -59,28 +60,43 @@ theme_override_constants/margin_bottom = 200
 layout_mode = 2
 
 [node name="Left" type="Control" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer"]
-custom_minimum_size = Vector2(150, 0)
+custom_minimum_size = Vector2(190, 0)
 layout_mode = 2
 
-[node name="Control" type="VBoxContainer" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Left"]
+[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Left"]
 layout_mode = 1
-anchors_preset = 14
+anchors_preset = 8
+anchor_left = 0.5
 anchor_top = 0.5
-anchor_right = 1.0
+anchor_right = 0.5
 anchor_bottom = 0.5
-offset_top = -205.0
-offset_right = -11.0
-offset_bottom = 205.0
+offset_left = -96.5
+offset_top = -282.5
+offset_right = 96.5
+offset_bottom = 282.5
 grow_horizontal = 2
 grow_vertical = 2
 theme_override_constants/separation = 20
 
-[node name="OppDropZone" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Left/Control" instance=ExtResource("6_3hmgy")]
+[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Left/VBoxContainer"]
+layout_mode = 2
+
+[node name="Control" type="VBoxContainer" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Left/VBoxContainer/MarginContainer"]
+layout_mode = 2
+size_flags_horizontal = 4
+theme_override_constants/separation = 20
+
+[node name="OppDropZone" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Left/VBoxContainer/MarginContainer/Control" instance=ExtResource("6_3hmgy")]
 unique_name_in_owner = true
 layout_mode = 2
 
-[node name="OppDeck" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Left/Control" instance=ExtResource("6_3hmgy")]
+[node name="OppDeck" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Left/VBoxContainer/MarginContainer/Control" instance=ExtResource("6_3hmgy")]
 unique_name_in_owner = true
+layout_mode = 2
+
+[node name="OppTriggerZone" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Left/VBoxContainer" instance=ExtResource("5_3hmgy")]
+unique_name_in_owner = true
+custom_minimum_size = Vector2(193, 139)
 layout_mode = 2
 
 [node name="Center" type="Control" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer"]
@@ -97,7 +113,7 @@ offset_top = -224.0
 offset_bottom = 224.0
 grow_horizontal = 2
 grow_vertical = 2
-theme_override_constants/margin_left = 67
+theme_override_constants/margin_left = 33
 theme_override_constants/margin_top = 19
 
 [node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Center/MarginContainer"]
@@ -174,16 +190,16 @@ anchor_left = 0.5
 anchor_top = 0.5
 anchor_right = 0.5
 anchor_bottom = 0.5
-offset_left = -294.5
-offset_top = -96.5
-offset_right = 294.5
-offset_bottom = 96.5
+offset_left = -264.0
+offset_top = -92.0
+offset_right = 264.0
+offset_bottom = 92.0
 grow_horizontal = 2
 grow_vertical = 2
 rotation = -1.5707964
-pivot_offset = Vector2(294.5, 96.5)
-MaxCards = 6
-Separation = -45
+pivot_offset = Vector2(264, 92)
+CardScale = 0.43
+Separation = -55
 
 [node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/OppBoard"]
 layout_mode = 1
@@ -347,16 +363,16 @@ anchor_left = 0.5
 anchor_top = 0.5
 anchor_right = 0.5
 anchor_bottom = 0.5
-offset_left = -294.5
-offset_top = -96.5
-offset_right = 294.5
-offset_bottom = 96.5
+offset_left = -264.0
+offset_top = -92.0
+offset_right = 264.0
+offset_bottom = 92.0
 grow_horizontal = 2
 grow_vertical = 2
 rotation = 1.5707964
-pivot_offset = Vector2(294.5, 96.5)
-MaxCards = 6
-Separation = -45
+pivot_offset = Vector2(264, 92)
+CardScale = 0.43
+Separation = -55
 
 [node name="Center" type="Control" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer"]
 layout_mode = 2
@@ -372,7 +388,7 @@ offset_top = -224.0
 offset_bottom = 224.0
 grow_horizontal = 2
 grow_vertical = 2
-theme_override_constants/margin_left = 2
+theme_override_constants/margin_left = 8
 theme_override_constants/margin_top = 19
 
 [node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Center/MarginContainer"]
@@ -476,30 +492,46 @@ position = Vector2(0, -22)
 points = PackedVector2Array(0, 0, -28, 26)
 
 [node name="Right" type="Control" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer"]
-custom_minimum_size = Vector2(150, 0)
+custom_minimum_size = Vector2(190, 0)
 layout_mode = 2
 
-[node name="Control" type="VBoxContainer" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Right"]
+[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Right"]
 layout_mode = 1
 anchors_preset = 8
 anchor_left = 0.5
 anchor_top = 0.5
 anchor_right = 0.5
 anchor_bottom = 0.5
-offset_left = -69.5
-offset_top = -205.0
-offset_right = 69.5
-offset_bottom = 205.0
+offset_left = -94.5
+offset_top = -272.5
+offset_right = 94.5
+offset_bottom = 272.5
 grow_horizontal = 2
 grow_vertical = 2
 theme_override_constants/separation = 20
 
-[node name="PlayerDeck" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Right/Control" instance=ExtResource("6_3hmgy")]
+[node name="PlayerTriggerZone" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Right/VBoxContainer" instance=ExtResource("5_3hmgy")]
+unique_name_in_owner = true
+custom_minimum_size = Vector2(193, 139)
+layout_mode = 2
+
+[node name="Control" type="MarginContainer" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Right/VBoxContainer"]
+layout_mode = 2
+
+[node name="Verticals" type="VBoxContainer" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Right/VBoxContainer/Control"]
+layout_mode = 2
+size_flags_horizontal = 4
+theme_override_constants/separation = 20
+
+[node name="PlayerDeck" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Right/VBoxContainer/Control/Verticals" instance=ExtResource("6_3hmgy")]
 unique_name_in_owner = true
 layout_mode = 2
 
-[node name="PlayerDropZone" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Right/Control" instance=ExtResource("6_3hmgy")]
+[node name="PlayerDropZone" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Right/VBoxContainer/Control/Verticals" instance=ExtResource("6_3hmgy")]
 unique_name_in_owner = true
+layout_mode = 2
+
+[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Right/VBoxContainer"]
 layout_mode = 2
 
 [node name="Open2" type="Control" parent="VBoxContainer"]
