@@ -1,0 +1,31 @@
+[gd_scene load_steps=4 format=3 uid="uid://xfgt43rddlvv"]
+
+[ext_resource type="Script" uid="uid://dqu5xpqw41lu7" path="res://Board/HorizontalCardArea.cs" id="1_fk78o"]
+[ext_resource type="Script" uid="uid://bqw5phtur46nx" path="res://Components/CardContainer.cs" id="1_gggsp"]
+[ext_resource type="PackedScene" uid="uid://b3rw6rjka7eon" path="res://Card/Card.tscn" id="2_xi216"]
+
+[node name="Panel" type="PanelContainer"]
+script = ExtResource("1_fk78o")
+
+[node name="ColorRect" type="ColorRect" parent="."]
+layout_mode = 2
+color = Color(0.6784314, 0.6784314, 0.6784314, 1)
+
+[node name="MarginContainer" type="MarginContainer" parent="."]
+layout_mode = 2
+theme_override_constants/margin_left = 2
+theme_override_constants/margin_top = 2
+theme_override_constants/margin_right = 2
+theme_override_constants/margin_bottom = 2
+
+[node name="Container" type="Control" parent="MarginContainer"]
+unique_name_in_owner = true
+custom_minimum_size = Vector2(189, 135.00002)
+layout_mode = 2
+script = ExtResource("1_gggsp")
+metadata/_custom_type_script = "uid://bqw5phtur46nx"
+
+[node name="Card" parent="MarginContainer/Container" instance=ExtResource("2_xi216")]
+layout_mode = 1
+rotation = 1.5707964
+scale = Vector2(0.45, 0.45)
